--- a/template/index.html
+++ b/template/index.html
@@ -131,8 +131,7 @@
     {{#if article.description}}
       <p>{{{nl2br article.description}}}</p>
     {{/if}}
-    <span class="type type__{{toLowerCase article.type}}">{{toLowerCase article.type}}</span>
-    <pre class="prettyprint language-html" data-type="{{toLowerCase article.type}}"><code>{{article.url}}</code></pre>
+    <pre class="prettyprint language-html" data-type="{{toLowerCase article.type}}"><span class="type type__{{toLowerCase article.type}}">{{toLowerCase article.type}}</span><code>{{article.url}}</code></pre>
 
     {{#if article.permission}}
       <p>
