--- a/template/index.html
+++ b/template/index.html
@@ -11,7 +11,7 @@
   <link href="img/favicon.ico" rel="icon" type="image/x-icon">
   <script src="vendor/polyfill.js"></script>
 </head>
-<body>
+<body class="container-fluid">
 
 <script id="template-sidenav" type="text/x-handlebars-template">
 <nav id="scrollingNav">
@@ -121,7 +121,7 @@
     </div>
     {{/if}}
     <div class="clearfix"></div>
-    
+
     {{#if article.author}}<h4 class="muted">Authored by: {{article.author}}</h4>{{/if}}
 
     {{#if article.deprecated}}
