--- a/template/index.html
+++ b/template/index.html
@@ -272,12 +272,14 @@
           <h3>{{__ "Parameters"}}</h3>
           {{#each article.parameter.fields}}
             <h4><input type="radio" data-sample-request-param-group-id="sample-request-param-{{@index}}"  name="{{../id}}-sample-request-param" value="{{@index}}" class="sample-request-param sample-request-switch" {{#if_eq @index compare=0}} checked{{/if_eq}} />{{__ @key}}</h4>
-            <div class="form-group {{../id}}-sample-request-param-fields{{#if_gt @index compare=0}} hide{{/if_gt}}">
+            <div class="{{../id}}-sample-request-param-fields{{#if_gt @index compare=0}} hide{{/if_gt}}">
               {{#each this}}
-                <label class="col-md-3 control-label" for="sample-request-param-field-{{field}}">{{field}}</label>
-                <div class="input-group">
-                  <input id="sample-request-param-field-{{field}}" type="text" placeholder="{{field}}" class="form-control sample-request-param" data-sample-request-param-name="{{field}}" data-sample-request-param-group="sample-request-param-{{@../index}}" {{#if optional}}data-sample-request-param-optional="true"{{/if}}>
-                  <div class="input-group-addon">{{{type}}}</div>
+                <div class="form-group">
+                    <label class="col-md-3 control-label" for="sample-request-param-field-{{field}}">{{field}}</label>
+                    <div class="input-group">
+                      <input id="sample-request-param-field-{{field}}" type="text" placeholder="{{field}}" class="form-control sample-request-param" data-sample-request-param-name="{{field}}" data-sample-request-param-group="sample-request-param-{{@../index}}" {{#if optional}}data-sample-request-param-optional="true"{{/if}}>
+                      <div class="input-group-addon">{{{type}}}</div>
+                    </div>
                 </div>
               {{/each}}
             </div>
