--- a/template/index.html
+++ b/template/index.html
@@ -1,6 +1,5 @@
 <!DOCTYPE html>
 <html>
-
 <head>
   <meta http-equiv="X-UA-Compatible" content="IE=edge" />
   <title>Loading...</title>
@@ -12,10 +11,9 @@
   <link href="img/favicon.ico" rel="icon" type="image/x-icon">
   <script src="vendor/polyfill.js"></script>
 </head>
-
 <body class="container-fluid">
 
-  <script id="template-sidenav" type="text/x-handlebars-template">
+<script id="template-sidenav" type="text/x-handlebars-template">
 <nav id="scrollingNav">
   <div class="sidenav-search">
     <input class="form-control search" type="text" placeholder="{{__ "Filter..."}}">
@@ -41,7 +39,7 @@
 </nav>
 </script>
 
-  <script id="template-project" type="text/x-handlebars-template">
+<script id="template-project" type="text/x-handlebars-template">
   <div class="pull-left">
     <h1>{{name}}</h1>
     {{#if description}}<h2>{{{nl2br description}}}</h2>{{/if}}
@@ -66,19 +64,19 @@
   <div class="clearfix"></div>
 </script>
 
-  <script id="template-header" type="text/x-handlebars-template">
+<script id="template-header" type="text/x-handlebars-template">
   {{#if content}}
     <div id="api-_" class="show-api-article show-api-_-article">{{{content}}}</div>
   {{/if}}
 </script>
 
-  <script id="template-footer" type="text/x-handlebars-template">
+<script id="template-footer" type="text/x-handlebars-template">
   {{#if content}}
     <div id="api-_footer" class="show-api-article show-api-_-article">{{{content}}}</div>
   {{/if}}
 </script>
 
-  <script id="template-generator" type="text/x-handlebars-template">
+<script id="template-generator" type="text/x-handlebars-template">
   {{#if template.withGenerator}}
     {{#if generator}}
       <div class="content">
@@ -88,7 +86,7 @@
   {{/if}}
 </script>
 
-  <script id="template-sections" type="text/x-handlebars-template">
+<script id="template-sections" type="text/x-handlebars-template">
   <section id="api-{{group}}" class="show-api-group show-api-{{group}}-group {{#if aloneDisplay}} hide{{/if}}">
     <h1>{{underscoreToSpace title}}</h1>
     {{#if description}}
@@ -102,7 +100,7 @@
   </section>
 </script>
 
-  <script id="template-article" type="text/x-handlebars-template">
+<script id="template-article" type="text/x-handlebars-template">
   <article id="api-{{article.group}}-{{article.name}}-{{article.version}}" {{#if hidden}}class="hide"{{/if}} data-group="{{article.group}}" data-name="{{article.name}}" data-version="{{article.version}}">
     <div class="pull-left">
       <h1>{{underscoreToSpace article.name}}{{#if article.title}} - {{article.title}}{{/if}}</h1>
@@ -179,7 +177,7 @@
   </article>
 </script>
 
-  <script id="template-article-param-block" type="text/x-handlebars-template">
+<script id="template-article-param-block" type="text/x-handlebars-template">
   {{#if params}}
     {{#each params.fields}}
       <h2>{{__ @key}}</h2>
@@ -236,7 +234,7 @@
   {{/if}}
 </script>
 
-  <script id="template-article-sample-request" type="text/x-handlebars-template">
+<script id="template-article-sample-request" type="text/x-handlebars-template">
     {{#if article.sampleRequest}}
       <h2>{{__ "Send a Sample Request"}}</h2>
       <form class="form-horizontal">
@@ -290,21 +288,21 @@
             </div>
             <div class="{{../id}}-sample-request-param-fields {{../id}}-sample-header-content-type-fields">
               {{#each this}}
-              {{#if_eq type compare="Boolean"}}
-              <div class="checkbox">
-                <label for="sample-request-param-field-{{field}}">
-                  <input id="sample-request-param-field-{{field}}" type="checkbox" sample-request-param data-sample-request-param-name="{{field}}" data-sample-request-param-group="sample-request-param-{{@../index}}" {{#if optional}}data-sample-request-param-optional="true"{{/if}}> {{field}}
-                </label>
-              </div>
-              {{else}}
-              <div class="form-group">
-                <label class="col-md-3 control-label" for="sample-request-param-field-{{field}}">{{field}}</label>
-                <div class="input-group">
-                  <input id="sample-request-param-field-{{field}}" type="text" placeholder="{{field}}" class="form-control sample-request-param" data-sample-request-param-name="{{field}}" data-sample-request-param-group="sample-request-param-{{@../index}}" {{#if optional}}data-sample-request-param-optional="true"{{/if}}>
-                  <div class="input-group-addon">{{{type}}}</div>
+                {{#if_eq type compare="Boolean"}}
+                <div class="checkbox">
+                  <label for="sample-request-param-field-{{field}}">
+                    <input id="sample-request-param-field-{{field}}" type="checkbox" sample-request-param data-sample-request-param-name="{{field}}" data-sample-request-param-group="sample-request-param-{{@../index}}" {{#if optional}}data-sample-request-param-optional="true"{{/if}}> {{field}}
+                  </label>
                 </div>
-              </div>
-              {{/if_eq}}
+                {{else}}
+                <div class="form-group">
+                  <label class="col-md-3 control-label" for="sample-request-param-field-{{field}}">{{field}}</label>
+                  <div class="input-group">
+                    <input id="sample-request-param-field-{{field}}" type="text" placeholder="{{field}}" class="form-control sample-request-param" data-sample-request-param-name="{{field}}" data-sample-request-param-group="sample-request-param-{{@../index}}" {{#if optional}}data-sample-request-param-optional="true"{{/if}}>
+                    <div class="input-group-addon">{{{type}}}</div>
+                  </div>
+                </div>
+                {{/if_eq}}
               {{/each}}
             </div>
           {{/each}}
@@ -328,7 +326,7 @@
     {{/if}}
 </script>
 
-  <script id="template-compare-article" type="text/x-handlebars-template">
+<script id="template-compare-article" type="text/x-handlebars-template">
   <article id="api-{{article.group}}-{{article.name}}-{{article.version}}" {{#if hidden}}class="hide"{{/if}} data-group="{{article.group}}" data-name="{{article.name}}" data-version="{{article.version}}" data-compare-version="{{compare.version}}">
     <div class="pull-left">
       <h1>{{underscoreToSpace article.group}} - {{{showDiff article.title compare.title}}}</h1>
@@ -420,7 +418,7 @@
   </article>
 </script>
 
-  <script id="template-article-compare-permission" type="text/x-handlebars-template">
+<script id="template-article-compare-permission" type="text/x-handlebars-template">
   <p>
   {{__ "Permission:"}}
   {{#each_compare_list_field article.permission compare.permission field="name"}}
@@ -489,7 +487,7 @@
   </p>
 </script>
 
-  <script id="template-article-compare-param-block" type="text/x-handlebars-template">
+<script id="template-article-compare-param-block" type="text/x-handlebars-template">
   {{#if source}}
     {{#each_compare_keys source.fields compare.fields}}
       {{#if typeSame}}
@@ -584,7 +582,7 @@
   {{/if}}
 </script>
 
-  <script id="template-article-compare-param-block-body" type="text/x-handlebars-template">
+<script id="template-article-compare-param-block-body" type="text/x-handlebars-template">
   <tbody>
     {{#each_compare_field source compare}}
       {{#if typeSame}}
@@ -664,44 +662,34 @@
   </tbody>
 </script>
 
-  <div class="container-fluid">
-    <div class="row">
-      <div id="sidenav" class="span2"></div>
-      <div id="content">
-        <div id="project"></div>
-        <div id="header"></div>
-        <div id="sections"></div>
-        <div id="footer"></div>
-        <div id="generator"></div>
-      </div>
+<div class="container-fluid">
+  <div class="row">
+    <div id="sidenav" class="span2"></div>
+    <div id="content">
+      <div id="project"></div>
+      <div id="header"></div>
+      <div id="sections"></div>
+      <div id="footer"></div>
+      <div id="generator"></div>
     </div>
   </div>
+</div>
 
-  <div id="loader">
-    <div class="spinner">
-      <div class="spinner-container container1">
-        <div class="circle1"></div>
-        <div class="circle2"></div>
-        <div class="circle3"></div>
-        <div class="circle4"></div>
-      </div>
-      <div class="spinner-container container2">
-        <div class="circle1"></div>
-        <div class="circle2"></div>
-        <div class="circle3"></div>
-        <div class="circle4"></div>
-      </div>
-      <div class="spinner-container container3">
-        <div class="circle1"></div>
-        <div class="circle2"></div>
-        <div class="circle3"></div>
-        <div class="circle4"></div>
-      </div>
-      <p>Loading...</p>
+<div id="loader">
+  <div class="spinner">
+    <div class="spinner-container container1">
+      <div class="circle1"></div><div class="circle2"></div><div class="circle3"></div><div class="circle4"></div>
     </div>
+    <div class="spinner-container container2">
+      <div class="circle1"></div><div class="circle2"></div><div class="circle3"></div><div class="circle4"></div>
+    </div>
+    <div class="spinner-container container3">
+      <div class="circle1"></div><div class="circle2"></div><div class="circle3"></div><div class="circle4"></div>
+    </div>
+    <p>Loading...</p>
   </div>
+</div>
 
-  <script data-main="main.js" src="vendor/require.min.js"></script>
+<script data-main="main.js" src="vendor/require.min.js"></script>
 </body>
-
 </html>
