--- a/template/index.html
+++ b/template/index.html
@@ -11,7 +11,7 @@
   <link href="img/favicon.ico" rel="icon" type="image/x-icon">
   <script src="vendor/polyfill.js"></script>
 </head>
-<body class="container-fluid">
+<body>
 
 <script id="template-sidenav" type="text/x-handlebars-template">
 <nav id="scrollingNav">
