--- a/template/css/style.css
+++ b/template/css/style.css
@@ -11,6 +11,26 @@ body, p, a, div, th, td {
   font-size: 16px;
 }
 
+@media (max-width: 767.98px) {
+  body.container-fluid {
+    padding-right: 15px;
+    padding-left: 15px;
+    margin-right: auto;
+    margin-left: auto;
+  }
+
+  body.container-fluid::before {
+    display: table;
+    content: " ";
+  }
+
+  body.container-fluid::after {
+    clear: both;
+    display: table;
+    content: " ";
+  }
+}
+
 td.code {
   font-size: 14px;
   font-family: "Source Code Pro", monospace;
