Add anchor tag links to each article group and name
Previously, if you wanted to link to a specific article, you needed to find it in the menu first. With a large API documentation, this was cumbersome. This change allows the user to click a link next to a group or article which adds the anchor tag to the URL.

I'm not sure this is a nice way to structure the HTML, but at least it didn't cause any line breaks or require any changes to CSS.

As part of this change I needed to upgrade bootstrap, as the old version was loading bootstrap from a non-https CDN, which Chrome blocks. I have compared the sample site using the old and new bootstrap version, and found nothing that broke.

--- a/template/index.html
+++ b/template/index.html
@@ -95,7 +95,10 @@
 
 <script id="template-sections" type="text/x-handlebars-template">
   <section id="api-{{group}}" class="show-api-group show-api-{{group}}-group {{#if aloneDisplay}} hide{{/if}}">
-    <h1>{{underscoreToSpace title}}</h1>
+    <h1>
+      <span>{{underscoreToSpace title}}</span>
+      <a href="#api-{{group}}"><span class="glyphicon glyphicon-link" aria-hidden="true"></span></a>
+    </h1>
     {{#if description}}
       <p>{{{nl2br description}}}</p>
     {{/if}}
@@ -110,7 +113,10 @@
 <script id="template-article" type="text/x-handlebars-template">
   <article id="api-{{article.group}}-{{article.name}}-{{article.version}}" {{#if hidden}}class="hide"{{/if}} data-group="{{article.group}}" data-name="{{article.name}}" data-version="{{article.version}}">
     <div class="pull-left">
-      <h1>{{underscoreToSpace article.groupTitle}}{{#if article.title}} - {{article.title}}{{/if}}</h1>
+      <h1>
+        <span>{{underscoreToSpace article.groupTitle}}{{#if article.title}} - {{article.title}}{{/if}}</span>
+        <a href="#api-{{article.group}}-{{article.name}}"><span class="glyphicon glyphicon-link" aria-hidden="true"></span></a>
+      </h1>
     </div>
     {{#if template.withCompare}}
     <div class="pull-right">
