requirejs is now copied from node_modules
it's not minified but it's still infinitely better than having it in
source control

--- a/template/index.html
+++ b/template/index.html
@@ -812,6 +812,6 @@
   </div>
 </div>
 
-<script data-main="main.js" src="vendor/require.min.js"></script>
+<script data-main="main.js" src="vendor/require.js"></script>
 </body>
 </html>
