--- a/template/css/style.css
+++ b/template/css/style.css
@@ -1,107 +1,56 @@
+/**
+ * Define colors
+ */
+:root {
+  --primary: #0088cc;
+  --white: #fff;
+  --main-gray: #777;
+  --dark-gray: #2d2d2d;
+  --hover-gray: #666;
+  --meth-get: green;
+  --meth-put: #e5c500;
+  --meth-post: #4070ec;
+  --meth-delete: #ed0039;
+  --red: red;
+}
+
+.color-primary {
+  color: var(--primary);
+}
+
 /* ------------------------------------------------------------------------------------------
  * Content
  * ------------------------------------------------------------------------------------------ */
 body {
-  max-width: 90%;
-}
-
-body, p, a, div, th, td {
   font-family: "Source Sans Pro", sans-serif;
-  font-weight: 400;
-  font-size: 16px;
 }
 
-@media (min-width: 1200px) {
-  body.container-fluid {
-    padding-right: 0px;
-    padding-left: 0px;
-    margin-right: 0px;
-    margin-left: 0px;
-  }
+.sidenav a:hover {
+  background-color: var(--hover-gray) !important;
 }
 
-td.code {
-  font-size: 14px;
-  font-family: "Source Code Pro", monospace;
-  font-style: normal;
-  font-weight: 400;
+a:focus {
+  background-color: var(--primary);
 }
 
 #content {
-  padding-top: 16px;
-  z-Index: -1;
-  margin-left: 18%;
+  margin-top: 10px;
+  margin-left: 20%;
+  padding-left: 10px;
 }
 
 p {
-  color: #808080;
-}
-
-h1 {
-  font-family: "Source Sans Pro Semibold", sans-serif;
-  font-weight: normal;
-  font-size: 44px;
-  line-height: 50px;
-  margin: 0 0 10px 0;
-  padding: 0;
-}
-
-h2 {
-  font-family: "Source Sans Pro", sans-serif;
-  font-weight: normal;
-  font-size: 24px;
-  line-height: 40px;
-  margin: 0 0 20px 0;
-  padding: 0;
+  font-size: 130%;
+  color: var(--main-gray);
 }
 
 section {
-  border-top: 1px solid #ebebeb;
   padding: 30px 0;
 }
 
-section h1 {
-  font-family: "Source Sans Pro", sans-serif;
-  font-weight: 700;
-  font-size: 32px;
-  line-height: 40px;
-  margin: 0 0 20px 0;
-  padding: 0;
-}
-
 article {
+  border-top: 1px solid var(--main-gray);
   padding: 14px 0 30px 0;
-}
-
-article h1 {
-  font-family: "Source Sans Pro Bold", sans-serif;
-  font-weight: 600;
-  font-size: 24px;
-  line-height: 26px;
-}
-
-article h2 {
-  font-family: "Source Sans Pro", sans-serif;
-  font-weight: 600;
-  font-size: 18px;
-  line-height: 24px;
-  margin: 0 0 10px 0;
-}
-
-article h3 {
-  font-family: "Source Sans Pro", sans-serif;
-  font-weight: 600;
-  font-size: 16px;
-  line-height: 18px;
-  margin: 0 0 10px 0;
-}
-
-article h4 {
-  font-family: "Source Sans Pro", sans-serif;
-  font-weight: 600;
-  font-size: 14px;
-  line-height: 16px;
-  margin: 0 0 8px 0;
 }
 
 table {
@@ -111,23 +60,29 @@ table {
 }
 
 th {
-  background-color: #f5f5f5;
+  background-color: var(--main-gray);
+  color: var(--white);
   text-align: left;
-  font-family: "Source Sans Pro", sans-serif;
-  font-weight: 700;
-  padding: 4px 8px;
-  border: #e0e0e0 1px solid;
+  padding: 5px 8px;
+  border: 1px solid var(--main-gray);
 }
 
 td {
   vertical-align: top;
   padding: 10px 8px 0 8px;
-  border: #e0e0e0 1px solid;
+  border: 1px solid var(--main-gray);
 }
 
-#generator .content {
-  color: #b0b0b0;
-  border-top: 1px solid #ebebeb;
+td.code {
+  font-size: 14px;
+  font-family: "Source Code Pro", monospace;
+  font-style: normal;
+  font-weight: 400;
+}
+
+
+#generator {
+  border-top: 1px solid var(--main-gray);
   padding: 10px 0;
 }
 
@@ -144,36 +99,9 @@ td {
 }
 
 /* ------------------------------------------------------------------------------------------
- * apidoc - intro
+ * Request method (HTTP verb)
  * ------------------------------------------------------------------------------------------ */
-
-#apidoc .apidoc {
-  border-top: 1px solid #ebebeb;
-  padding: 30px 0;
-}
-
-#apidoc h1 {
-  font-family: "Source Sans Pro", sans-serif;
-  font-weight: 700;
-  font-size: 32px;
-  line-height: 40px;
-  margin: 0 0 20px 0;
-  padding: 0;
-}
-
-#apidoc h2 {
-  font-family: "Source Sans Pro Bold", sans-serif;
-  font-weight: 600;
-  font-size: 22px;
-  line-height: 26px;
-  padding-top: 14px;
-}
-
-/* ------------------------------------------------------------------------------------------
- * Request type
- * ------------------------------------------------------------------------------------------ */
-.type {
-  font-family: "Source Sans Pro", sans-serif;
+.method {
   font-weight: 600;
   font-size: 15px;
   display: inline-block;
@@ -181,53 +109,45 @@ td {
   padding: 4px 5px;
   border-radius: 6px;
   text-transform: uppercase;
-  background-color: #3387CC;
-  color: #ffffff;
+  background-color: var(--main-gray);
+  color: var(--white);
 }
 
-.type__get {
-  background-color: green;
+.meth-get {
+  background-color: var(--meth-get);
 }
 
-.type__put {
-  background-color: #e5c500;
+.meth-put {
+  background-color: var(--meth-put);
 }
 
-.type__post {
-  background-color: #4070ec;
+.meth-post {
+  background-color: var(--meth-post);
 }
 
-.type__delete {
-  background-color: #ed0039;
+.meth-delete {
+  background-color: var(--meth-delete);
 }
 
 /* ------------------------------------------------------------------------------------------
  * Sidenav
  * ------------------------------------------------------------------------------------------ */
 .sidenav {
-  width: 15%;
-  margin: 0;
-  padding: 0 20px 20px 20px;
+  color: var(--white);
+  width: 20%;
   position: fixed;
   top: 50px;
   left: 0;
   bottom: 0;
   overflow-x: hidden;
   overflow-y: auto;
-  background-color: #f5f5f5;
-  z-index: 10;
+  background-color: var(--dark-gray);
 }
 
 .sidenav > li > a {
+  color: var(--white);
   display: block;
-  margin: 0;
-  padding: 2px 11px;
-  border: 0;
-  border-left: transparent 4px solid;
-  border-right: transparent 4px solid;
-  font-family: "Source Sans Pro", sans-serif;
-  font-weight: 400;
-  font-size: 14px;
+  padding: 8px 13px;
 }
 
 .sidenav > li.nav-header {
@@ -237,39 +157,34 @@ td {
 
 .sidenav > li.nav-header > a {
   padding: 5px 15px;
-  border: 1px solid #e5e5e5;
-  width: 190px;
-  font-family: "Source Sans Pro", sans-serif;
   font-weight: 700;
   font-size: 16px;
-  background-color: #ffffff;
+  background-color: var(--main-gray);
 }
 
 .sidenav > li.active > a {
-    position: relative;
-    z-index: 2;
-    background-color: #0088cc;
-    color: #ffffff;
+  position: relative;
+  background-color: var(--primary);
+  color: var(--white);
 }
 
 .sidenav > li.has-modifications a {
-  border-right: #60d060 4px solid;
+  border-right: 4px solid var(--main-gray);
 }
 
 .sidenav > li.is-new a {
-  border-left: #e5e5e5 4px solid;
+  border-left: 4px solid var(--main-gray);
 }
 
 /* ------------------------------------------------------------------------------------------
  * Side nav search
  * ------------------------------------------------------------------------------------------ */
 .sidenav-search {
-  width: 15%;
+  width: 20%;
   left: 0px;
   position: fixed;
   padding: 16px 20px 10px 20px;
-  background-color: #F5F5F5;
-  z-index: 11;
+  background-color: var(--dark-gray);
 }
 
 .sidenav-search .search {
@@ -475,7 +390,7 @@ ul.nav-tabs {
 }
 
 p.deprecated span{
-  color: #ff0000;
+  color: var(--red);
   font-weight: bold;
   text-decoration: underline;
 }
