WIP: remove require.js, use webpack, remove template-single
welcome to 2021 apidoc ;)

--- a/template/index.html
+++ b/template/index.html
@@ -4,13 +4,13 @@
   <title>Loading...</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
-  <link href="vendor/bootstrap.min.css" rel="stylesheet" media="screen">
-  <link href="vendor/prism.css" rel="stylesheet" />
-  <link href="css/style.css" rel="stylesheet" media="screen, print">
-  <link href="img/favicon.ico" rel="icon" type="image/x-icon">
-  <link rel="apple-touch-icon" sizes="180x180" href="img/apple-touch-icon.png">
-  <link rel="icon" type="image/png" sizes="32x32" href="img/favicon-32x32.png">
-  <link rel="icon" type="image/png" sizes="16x16" href="img/favicon-16x16.png">
+  <link href="assets/bootstrap.min.css" rel="stylesheet" media="screen">
+  <link href="assets/prism.css" rel="stylesheet" />
+  <link href="assets/main.css" rel="stylesheet" media="screen, print">
+  <link href="assets/favicon.ico" rel="icon" type="image/x-icon">
+  <link href="assets/apple-touch-icon.png" rel="apple-touch-icon" sizes="180x180">
+  <link href="assets/favicon-32x32.png" rel="icon" type="image/png" sizes="32x32">
+  <link href="assets/favicon-16x16.png"rel="icon" type="image/png" sizes="16x16">
 </head>
 
 <body class="container-fluid">
@@ -817,6 +817,6 @@
   </div>
 </div>
 
-<script data-main="main.js" src="vendor/require.js"></script>
+<script src="assets/main.bundle.js"></script>
 </body>
 </html>
